<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.VerificationActivity">

    <!-- Title for the verification page -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvVerificationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_verification"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/purple_500"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Champ de texte pour le code de vérification -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verificationCodeTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvVerificationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verificationCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            android:inputType="text"
            android:maxLength="36"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Bouton de vérification -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/verificationCodeTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
